testdata/baselines/reference/submodule/conformance/templateStringInNewExpressionES6.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
templateStringInNewExpressionES6.ts(1,5): error TS2351: This expression is not constructable.
  Type '{}' has no construct signatures.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== templateStringInNewExpressionES6.ts (1 errors) ====
    new `abc${0}abc`(`hello ${0} world`, `   `, `1${2}3`);
        ~~~~~~~~~~~~
!!! error TS2351: This expression is not constructable.
!!! error TS2351:   Type '{}' has no construct signatures.